[android][x2t] update x2t gui test app for x2t library