@@ -1,32 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-/*
--Xms1024m
--Xmx4096m
--XX:MaxPermSize=1024m
--XX:ReservedCodeCacheSize=512m
--XX:+UseConcMarkSweepGC
--XX:+UseCompressedOops
--XX:-HeapDumpOnOutOfMemoryError
--XX:SoftRefLRUPolicyMSPerMB=50
-*/
-
 buildscript {
-    
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url 'https://jitpack.io' }
-        mavenCentral()
-        maven { url 'https://maven.google.com' }
+        
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.google.gms:google-services:3.2.0'
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath 'de.undercouch:gradle-download-task:3.4.3'
+        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
@@ -34,10 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.google.com' }
-        maven { url 'https://maven.fabric.io/public' }
+        
     }
 }
 
